--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/nodemailer": "^7.0.3",
     "@types/qrcode": "^1.5.6",
     "@types/react-calendar": "^4.1.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
